build.15: extensive UI refactors, documentation updates and DasikLib sync